# nabi-core-ROS2

./: .gitignore
install/: local_setup.sh  setup.sh
install/my_package/lib/my_package/: my_node
install/my_package/share/my_package/: package.sh  package.xml
install/nabi/lib/nabi/: actor  canbus  joint  parser  recorder  talker  writer
install/nabi/share/nabi/: conversation_launch.py  joints_launch.py  nabi_launch.py  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nabi_interfaces/share/nabi_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nabi_interfaces/share/nabi_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_nabi_interfaces__rosidl_generator_cExport-noconfig.cmake  export_nabi_interfaces__rosidl_generator_cExport.cmake  export_nabi_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  nabi_interfacesConfig-version.cmake  (+8 more)
install/py_pubsub/share/py_pubsub/: package.sh  package.xml
install/py_srvcli/share/py_srvcli/: package.sh  package.xml
install/python_parameters/lib/python_parameters/: minimal_param_node
install/python_parameters/share/python_parameters/: package.dsv  package.ps1  package.sh  package.xml  python_parameters_launch.py
install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build  latest_list
src/action_tutorials_interfaces/: Fibonacci.action  package.xml
src/my_package/: package.xml  setup.py
src/nabi/: package.xml  setup.cfg  setup.py
src/nabi/launch/: conversation_launch.py  joints_launch.py  nabi_launch.py
src/nabi/nabi/: .env  actor.py  canbus.py  cancomms.py  joint.py  parser.py  predefined.py  recorder.py  talker.py  writer.py
src/nabi_interfaces/msg/: Joint.msg
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: publisher_member_function.py
src/py_srvcli/: package.xml  setup.py
src/py_srvcli/py_srvcli/: service_member_function.py
src/python_parameters/: package.xml  setup.py
(+77 files in other folders)
