<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nabi</name>
  <version>0.0.0</version>
  <description>Package for controlling Arctos robot arm using reinforcement learning and real-life conversations.</description>
  <maintainer email="johnlouis.dante@gmail.com">John Louis D. Lagramada</maintainer>
  <license>Apache-2.0</license>

  <!-- Some are commented out because no rosdep keys are available for these dependencies. -->

  <exec_depend>portaudio19-dev</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend version_eq="0.44.0">python-wheel</exec_depend>
  <!-- <exec_depend version_eq="2.19.2">google-api-core</exec_depend> -->
  <exec_depend version_eq="2.34.0">python3-google-auth</exec_depend>
  <!-- <exec_depend version_eq="1.35.0">google-cloud-dialogflow-cx</exec_depend>
  <exec_depend version_eq="1.65.0">googleapis-common-protos</exec_depend> -->
  <exec_depend version_eq="1.66.1">python-grpcio</exec_depend>
  <!-- <exec_depend version_eq="1.66.1">grpcio-status</exec_depend>
  <exec_depend version_eq="3.8">idna</exec_depend> -->
  <exec_depend version_eq="2.1.1">python3-numpy</exec_depend>
  <!-- <exec_depend version_eq="1.3.0">playsound</exec_depend>
  <exec_depend version_eq="1.24.0">proto-plus</exec_depend> -->
  <exec_depend version_eq="5.28.1">python3-protobuf</exec_depend>
  <!-- <exec_depend version_eq="0.6.1">pyasn1</exec_depend>
  <exec_depend version_eq="0.4.1">pyasn1_modules</exec_depend> -->
  <exec_depend version_eq="0.2.14">python3-pyaudio</exec_depend>
  <!-- <exec_depend version_eq="1.0.1">python3-dotenv</exec_depend> -->
  <exec_depend version_eq="2.32.3">python3-requests</exec_depend>
  <exec_depend version_eq="4.9">python3-rsa</exec_depend>
  <exec_depend version_eq="58.2.0">python3-setuptools</exec_depend>
  <exec_depend version_eq="6.0.2">python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
